# revery-playground

./: .gitignore  README.md  azure-pipelines.yml  build.js  esy.json  package-lock.json  package.json  playground.install
.ci/: esy-build-steps.yml
assets/: dune  index.css  index.html  index.js  playground.html  playground.js  worker.js
esy.lock/: index.json
src/: .merlin  Playground.re  Renderer.re  dune  index.css  index.html  worker.js
src/lib/: .merlin  PlaygroundLib.re  Protocol.re  Types.re  Worker.re  dune
src/renderer/: MonacoDiagnostics.re  PhraseCompilationResult.re  Renderer.re  dune
src/worker/: Backend.re  NodeProxies.re  Playground.re  ProxyNodeFactory.re  Revery_worker.re  Syntax.re  dune  refmtJsApi.ml
