(executable
 (name Renderer)
 (modules Renderer MonacoDiagnostics PhraseCompilationResult)
 (preprocess (pps js_of_ocaml-ppx))
 (flags -custom)
 (modes byte)
 (public_name Renderer)
 (libraries 
  js_of_ocaml playground.lib Revery)
 )

(install
    (section bin)
    (package playground)
    (files Renderer.bc.js))
