(executable
 (name Revery_worker)
 (modules Revery_worker Playground Backend NodeProxies ProxyNodeFactory reason_util)
 (flags :standard -safe-string -rectypes)
 (link_flags (:standard -linkall))
 (preprocess (pps js_of_ocaml-ppx))
 (libraries 
  bigarray js_of_ocaml js_of_ocaml-compiler js_of_ocaml-toplevel compiler-libs Revery_Core Revery playground.lib reason)
 )

    (rule
     (targets export.txt)
     (deps Revery_worker.bc)
     (action (run jsoo_listunits -o %{targets} stdlib bigarray brisk-reconciler reglm Revery_Core Revery_Draw Revery_Math Revery_Native Revery_UI Revery_UI_Components Revery playground.lib)))

    (rule
     (targets Revery_worker.js)
     (action
      (run %{bin:js_of_ocaml}
       --export %{dep:export.txt}
       --toplevel
       --pretty
       --noruntime
       --disable genprim
       %{lib:js_of_ocaml-compiler:runtime.js}
       %{lib:js_of_ocaml-compiler:toplevel.js}
       %{lib:js_of_ocaml-compiler:dynlink.js}
       %{lib:reglm:gl-matrix_stubs.js}
       %{lib:reglfw:glfw_stubs.js}
       %{lib:reglfw:gl_stubs.js}
       %{lib:reglfw:image_stubs.js}
       %{lib:reglfw:stb_image_stubs.js}
       %{lib:Revery_Core:file.js}
       %{dep:Revery_worker.bc}
       -o %{targets}
      )))

    (alias
     (name default)
     (deps Revery_worker.js))

(install
    (section bin)
    (package playground)
    (files Revery_worker.js))
